<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:text="@string/textView_username"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_string"
        android:inputType="text"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:text="@string/textView_password"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_string"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_button"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="16dp"
            android:background="?attr/colorPrimary"
            android:text="@string/button_string"
            android:textColor="?attr/colorButtonText"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>