<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/username_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorText"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"

        app:srcCompat="@mipmap/ic_origami" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="15dp"
        android:text="@string/textView_fullName"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?attr/colorText"/>

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/profileBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:text="@string/textView_birth"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?attr/colorText"/>

    <EditText
        android:id="@+id/birthText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/profileBloodType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:text="@string/textView_bloodType"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?attr/colorText"/>

    <EditText
        android:id="@+id/bloodText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>
</LinearLayout>
